--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        
+
         <dependency>
 	    <groupId>org.springframework.boot</groupId>
 	    <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -30,7 +30,9 @@
             <artifactId>postgresql</artifactId>
             <version>9.4-1200-jdbc41</version>
         </dependency>
-        
     </dependencies>
-
+    
+    <properties>
+    <java.version>1.8</java.version>
+	</properties>
 </project>
