--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,24 @@
         </dependency>
     </dependencies>
     
+    <build>
+    
+        <plugins>
+         <plugin>
+	        <artifactId>maven-compiler-plugin</artifactId>
+	        <version>2.3.2</version>
+	        <configuration>
+	          <source>1.7</source>
+	          <target>1.7</target>
+	        </configuration>
+      </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+    
     <properties>
     <java.version>1.8</java.version>
 	</properties>
